--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   margin: 0;
-  background: #eee url("../images/pw_maze_white.png");
+  background: white; //url("../images/pw_maze_white.png");
 }
 
 img {
