home page ui change

--- a/app/isomorphic/components/header/nav-bar/styles.m.css
+++ b/app/isomorphic/components/header/nav-bar/styles.m.css
@@ -5,7 +5,8 @@
   display: flex;
   font-size: 15px;
   text-transform: uppercase;
-  align-items: center;
+  margin-top: 60px;
+  margin-left: -450px;
 }
 .menu-item {
   cursor: pointer;
